# diagonalpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: integration.yaml
script/: run_export.py
src/diagonalpy/: convert.py  deploy.py  export.py  save.py
src/diagonalpy/models/: linear_model.py
src/diagonalpy/sklearn/: linear_model.py
tests/integration/: test_conversion.py  test_export.py
