[project]
authors = [
    {name = "Leon Luithlen"},
]
requires-python = "==3.12.7"
dependencies = [
    "scikit-learn<2.0.0,>=1.5.1",
    "torch<3.0.0,>=2.5.1"
]
name = "diagonalpy"
version = "0.1.0"
description = "diagonalsh sdk for python"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.9.1",
    "pytest<9.0.0,>=8.3.4"
]

