[project]
authors = [
    {name = "Leon Luithlen"},
]
requires-python = ">=3.9"  # This allows Python 3.9 and higher
dependencies = [
    "scikit-learn>=1.2.0",  # More permissive lower bound
    "torch>=2.0.0",         # More permissive lower bound
    "numpy>=1.24.0"
]
name = "diagonalpy"
version = "0.1.0"
description = "diagonalsh sdk for python"

[dependency-groups]
dev = [
    "ruff>=0.9.0",     # Remove upper bound for development tools
    "pytest>=8.0.0"    # Remove upper bound for development tools
]
